[metadata]
name = robinhood_portfolio_manager
version = 0.0a4
author = Mina Messiha
author_email = mena.sb.109@gmail.com
description = A portfolio manager for Robinhood
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MinaMessiha109/robinhood_portfolio_manager
license = MIT License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
  pyotp
  openpyxl
  robin_stocks

[options.entry_points]
console_scripts =
    ropoma = robinhood_portfolio_manager:main